--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,4 +1,4 @@
 uk:
   knuba: "Київський Національний Університет Будівництва та Архітектури"
   time:
-    ago: "%{time} назад."
+    ago: "%{time} тому."
