--- a/config/locales/uk.activerecord.yml
+++ b/config/locales/uk.activerecord.yml
@@ -2,7 +2,7 @@ uk:
   attributes:
     created_at: "Створено"
     updated_at: "Оновлено"
-  
+
   activerecord:
     notices:
       updated: "Інформація про %{model} успішно змінена."
@@ -35,7 +35,7 @@ uk:
         other: "Роботи у замовленні"
       resource:
         one: "Ресурс"
-        few: "Ресурси"
+        few: "Ресурса"
         many: "Ресурсів"
         other: "Ресурси"
       resource_in_task:
@@ -58,7 +58,7 @@ uk:
         few: "Машини"
         many: "Машин"
         other: "Машини"
-        
+
     attributes:
       client:
         name: "Назва"
