--- a/config/locales/uk.activerecord.yml
+++ b/config/locales/uk.activerecord.yml
@@ -77,6 +77,7 @@ uk:
       order_task:
         amount: "Обсяг"
         task: "Робота"
+        is_complete: "Закінчена?"
       resource:
         name: "Назва"
         code: "Шифр"
